--- a/resources/assets/styles/components/cards.scss
+++ b/resources/assets/styles/components/cards.scss
@@ -2,20 +2,27 @@
   padding-top: 85px;
   padding-bottom: 100px;
   &__block {
+    min-height: 400px;
+    z-index: 9;
+    margin-right: 20px;
     background-color: #333534;
     padding: 20px;
     border-radius: 10%;
+
     &:last-child {
       margin-right: 0;
     }
+
     &-img {
       img {
         width: 100%;
       }
     }
     &-info {
+      padding: 30px 10px 30px 10px;
+      height: 100%;
+      max-height: 200px;
       background-color: #3697a7;
-      padding: 40px 10px;
       p {
         font-size: 16px;
         color: #fff;
@@ -25,6 +32,10 @@
   }
   &__blocks {
     display: flex;
+    margin-top: 10px;
+    @media (max-width: 991px) {
+      flex-direction: column;
+    }
   }
   h3,
   h4 {
